@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.350 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.351 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -89,3 +89,6 @@ Changes from NetBSD 2.0 to NetBSD 2.1:
 	wsconsctl(4): Add support to change console colors and kernel colors
 		dynamically after boot [jmmv 20040728]
 	postfix: Postfix 2.1.4 imported.  [heas 20040728]
+	vga(4): Add support to change console border color [jmmv 20040729]
+	wscons(4): Add support to change console border color [jmmv 20040729]
+	wsconsctl(4): Add support to change console border color [jmmv 20040729]
